// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create book 1`] = `
Object {
  "chapters": Array [
    "members",
    "poi",
  ],
  "cover": Object {
    "name": "Japan",
  },
  "id": "1",
  "members": Array [
    "user-2",
    "user-3",
  ],
  "poi": Array [
    "SkyTree",
  ],
}
`;

exports[`create book 2`] = `
Object {
  "travel/1.json": Object {
    "data": "",
    "metadata": Object {
      "__chapters": "members,poi",
      "__id": "1",
      "name": "Japan",
    },
  },
  "travel/1/chapter/members.json": Object {
    "data": "[\\"user-2\\",\\"user-3\\"]",
    "metadata": Object {},
  },
  "travel/1/chapter/poi.json": Object {
    "data": "[\\"SkyTree\\"]",
    "metadata": Object {},
  },
}
`;

exports[`delete book 1`] = `
Object {
  "travel/1.json": Object {
    "data": "",
    "metadata": Object {
      "__chapters": "members,poi",
      "__id": "1",
      "name": "Japan",
    },
  },
  "travel/1/chapter/members.json": Object {
    "data": "[\\"user-2\\",\\"user-3\\"]",
    "metadata": Object {},
  },
  "travel/1/chapter/poi.json": Object {
    "data": "[\\"SkyTree\\"]",
    "metadata": Object {},
  },
}
`;

exports[`delete book 2`] = `Object {}`;

exports[`list book 1`] = `
Object {
  "1": Object {
    "chapters": Array [
      "members",
      "poi",
    ],
    "cover": Object {
      "name": "Japan",
    },
    "id": "1",
  },
  "2": Object {
    "chapters": Array [],
    "cover": Object {
      "name": "Taipei",
    },
    "id": "2",
  },
}
`;

exports[`read book 1`] = `
Object {
  "chapters": Array [
    "members",
    "poi",
  ],
  "cover": Object {
    "name": "Japan",
  },
  "id": "1",
  "members": Array [
    "user-2",
    "user-3",
  ],
  "poi": Array [
    "SkyTree",
  ],
}
`;

exports[`read chapter 1`] = `
Array [
  "SkyTree",
]
`;

exports[`update book cover 1`] = `
Object {
  "chapters": Array [
    "members",
    "poi",
  ],
  "cover": Object {
    "name": "Japan",
    "owner": "John Doe",
  },
  "id": "1",
}
`;

exports[`update book cover 2`] = `
Object {
  "travel/1.json": Object {
    "data": "",
    "metadata": Object {
      "__chapters": "members,poi",
      "__id": "1",
      "name": "Japan",
      "owner": "John Doe",
    },
  },
  "travel/1/chapter/members.json": Object {
    "data": "[\\"user-2\\",\\"user-3\\"]",
    "metadata": Object {},
  },
  "travel/1/chapter/poi.json": Object {
    "data": "[\\"SkyTree\\"]",
    "metadata": Object {},
  },
}
`;

exports[`update chapter with cover 1`] = `
Object {
  "name": "Japan",
}
`;

exports[`update chapter with cover 2`] = `
Array [
  "SkyTree",
]
`;

exports[`update chapter with cover 3`] = `
Object {
  "chapters": Array [
    "members",
    "poi",
  ],
  "cover": Object {
    "name": "Japan",
    "owner": "John Doe",
  },
  "id": "1",
  "poi": Array [
    "SkyTree",
    "Asakusa",
  ],
}
`;

exports[`update chapter with cover 4`] = `
Object {
  "travel/1.json": Object {
    "data": "",
    "metadata": Object {
      "__chapters": "members,poi",
      "__id": "1",
      "name": "Japan",
      "owner": "John Doe",
    },
  },
  "travel/1/chapter/members.json": Object {
    "data": "[\\"user-2\\",\\"user-3\\"]",
    "metadata": Object {},
  },
  "travel/1/chapter/poi.json": Object {
    "data": "[\\"SkyTree\\",\\"Asakusa\\"]",
    "metadata": Object {},
  },
}
`;

exports[`update chapter without cover 1`] = `
Array [
  "SkyTree",
]
`;

exports[`update chapter without cover 2`] = `
Object {
  "chapters": Array [
    "members",
    "poi",
  ],
  "cover": Object {
    "name": "Japan",
  },
  "id": "1",
  "poi": Array [
    "SkyTree",
    "Asakusa",
  ],
}
`;

exports[`update chapter without cover 3`] = `
Object {
  "travel/1.json": Object {
    "data": "",
    "metadata": Object {
      "__chapters": "members,poi",
      "__id": "1",
      "name": "Japan",
    },
  },
  "travel/1/chapter/members.json": Object {
    "data": "[\\"user-2\\",\\"user-3\\"]",
    "metadata": Object {},
  },
  "travel/1/chapter/poi.json": Object {
    "data": "[\\"SkyTree\\",\\"Asakusa\\"]",
    "metadata": Object {},
  },
}
`;
